# kittycat

./: .gitignore  Cargo.toml  LICENSE  README.md
c/: .gitignore  CMakeLists.txt  Makefile  README.md
c/src/: hashmap.c  hashmap.h  kc_string.c  kc_string_test.c  perms.c  perms.h  perms_test.c  prelude.c
c/src/hashmap/: hashmap.c  hashmap.h
c/src/lib/: alloc.c  alloc.h  hashmap.c  hashmap.h  kc_string.c  kc_string.h  kittycat.pc.in  perms.c  perms.h  prelude.c  prelude.h
c/src/set/: set.h
c/src/tests/: kc_string_test.c  perms_test.c
go/: go.mod  go.sum  perms.go  perms_test.go
luau/: init.luau
python/: setup.py
rust/: Cargo.toml
rust/src/: perms.rs
src/: lib.rs  perms.rs
ts/: README.md  package-lock.json  package.json  perms.ts  perms_test.ts  tsconfig.json
